--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "jax>=0.7.1",
     "numpy>=2.3.3",
+    "nvidia-dali-cuda120>=1.51.2",
     "torch>=2.8.0",
+    "torchvision>=0.23.0",
 ]
 
 [dependency-groups]
