--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "jax>=0.7.1",
+    "matplotlib>=3.10.6",
     "numpy>=2.3.3",
-    "nvidia-dali-cuda120>=1.51.2",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
 ]
 
 [dependency-groups]
 dev = ["ipykernel>=6.30.1"]
+cuda = ["nvidia-dali-cuda120>=1.51.2"]
