--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "jax>=0.7.1",
     "matplotlib>=3.10.6",
     "numpy>=2.3.3",
+    "seaborn>=0.13.2",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
+    "tqdm>=4.67.1",
 ]
 
 [dependency-groups]
