--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "custom-ops-bn",
     "jax>=0.7.1",
     "matplotlib>=3.10.6",
     "numpy>=2.3.3",
@@ -17,3 +18,6 @@ dependencies = [
 [dependency-groups]
 dev = ["ipykernel>=6.30.1"]
 cuda = ["nvidia-dali-cuda120>=1.51.2"]
+
+[tool.uv.sources]
+custom-ops-bn = { path = "06-triton-bn" }
