--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,13 @@ name = "dl-impl"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
-    "custom-ops-bn",
-    "jax>=0.7.1",
+    "hailort",
     "matplotlib>=3.10.6",
-    "numpy>=2.3.3",
+    "numpy>=1,<2",
+    "onnx>=1.19.0",
+    "onnxruntime>=1.23.2",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
@@ -17,7 +18,8 @@ dependencies = [
 
 [dependency-groups]
 dev = ["ipykernel>=6.30.1"]
-cuda = ["nvidia-dali-cuda120>=1.51.2"]
+cuda = ["nvidia-dali-cuda120>=1.51.2", "custom-ops-bn"]
 
 [tool.uv.sources]
 custom-ops-bn = { path = "06-triton-bn", editable = true }
+hailort = { path = "07-mobilenet-rpi/hailort-4.19.0-cp311-cp311-linux_aarch64.whl" }
