--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ dependencies = [
     "torchvision~=0.19.1",
     "torch>=2.4.1",
     "tqdm>=4.67.1",
+    "fastapi>=0.121.1",
+    "uvicorn>=0.38.0",
+    "httpx>=0.28.1",
+    "requests>=2.32.5",
 ]
 
 [dependency-groups]
